data/derived/comb/progs/unify/prog0794.ml.out
Characters 107-109:
  | Sine (ex)   -> let ex1 = eval(ex,x,y) in sin(pi * ex1)
                                                 ^^
Error: This expression has type float but an expression was expected of type
         int
